# cuda-mppi

./: .gitignore  .nojekyll  CLAUDE.md  CMakeLists.txt  Justfile  LICENSE  README.md  index.html  justfile  pixi.toml  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/: pull_request_template.md
.github/workflows/: publish.yml
.jules/: bolt.md
api/: python_api.html
bindings/: bindings.cu
cmake/: cuda_mppiConfig.cmake.in
controllers/: controllers.html  i_mppi.html
core/: architecture.html  jit.html
dev/: development.html
docs/: .gitignore  _quarto.yml  architecture.qmd  development.qmd  i_mppi.qmd  index.qmd  jit.qmd
docs/api/: python_api.qmd
docs/controllers/: controllers.qmd  i_mppi.qmd
docs/core/: architecture.qmd
docs/dev/: development.qmd
docs/intro/: getting_started.qmd
docs/plan/: i_mppi_development.md  index.qmd
examples/: CMakeLists.txt  informative_sim.cu  mppi_log_trajectories.cu
include/mppi/controllers/: bspline_mppi.cuh  i_mppi.cuh  jit_mppi.hpp  kmppi.cuh  mppi.cuh  smppi.cuh
include/mppi/core/: bspline.cuh  fsmi.cuh  kernels.cuh  map.cuh  mppi_common.cuh  softmax.cuh
include/mppi/instantiations/: acceleration_cost.cuh  bicycle.cuh  double_integrator.cuh  double_integrator_3d.cuh  fsmi_cost.cuh  ground_cost.cuh  informative_cost.cuh  informative_cost_3d.cuh  inverted_pendulum.cuh  point_mass_3d.cuh  quadrotor.cuh  tracking_cost.cuh  unicycle.cuh
include/mppi/jit/: examples.hpp  jit_compiler.hpp  jit_utils.h
include/mppi/planning/: trajectory_generator.hpp
include/mppi/utils/: cuda_utils.cuh
intro/: getting_started.html
plan/: i_mppi_development.html  index.html
scripts/: ablation_plots.py  ablation_study.py  analyze_exploration.py  bench_jax_mppi.py  environments.py  plot_mppi_tests.py  visualize_imppi.py
site_libs/bootstrap/: bootstrap-312b66175a1f02a035263df1a0cb5ed4.min.css
src/: fsmi_unit_test.cu  i_mppi_sim.cu  i_mppi_test.cu  informative_sim.cu  main_test.cu  mppi_gtest.cu  mppi_log_trajectories.cu  pendulum_test.cu
src/jit/: jit_compiler.cpp  jit_mppi_controller.cpp
tests/: CMakeLists.txt  bspline_test.cu  fsmi_unit_test.cu  i_mppi_gtest.cu  i_mppi_test.cu  mppi_gtest.cu  pendulum_test.cu  test_basic.py  test_quadrotor_tracking.py  test_tracking_comparison.py
