[project]
name = "cuda-mppi"
version = "0.1.0"
description = "CUDA-accelerated Model Predictive Path Integral (MPPI) control"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Riccardo Enrico" }]
keywords = [
  "cuda", "mppi", "model-predictive-control", "robotics",
  "optimal-control", "trajectory-optimization",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "numpy",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "basedpyright",
  "ruff>=0.14.14",
  "nanobind>=1.3.2",
  "PyYAML",
]

[project.urls]
Homepage = "https://github.com/riccardo-enr/cuda-mppi"
Repository = "https://github.com/riccardo-enr/cuda-mppi"
"Bug Tracker" = "https://github.com/riccardo-enr/cuda-mppi/issues"

[tool.ruff]
line-length = 80
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
preview = true

[build-system]
requires = ["scikit-build-core>=0.3.3", "nanobind>=1.3.2"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.version = ">=3.18"
wheel.expand-macos-universal-tags = true
# The project doesn't have a pure python src/ folder yet,
# but scikit-build-core will manage the extension defined in CMakeLists.txt
